[ADD] loading animation with overlay, currently used while the cache is being updated

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./scripts.js"></script>
 </head>
 <body>
+    <div id="loading_overlay"><div class="loader">Loading&nbsp;&ellip;</div></div>
     <input type="text" id="navigator" list="documents"/>
     <datalist id="documents"></datalist>
     <div id="summernote"></div>
