[IMP] add polyfill for the datalist

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="./font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="./summernote-0.6.2-dist/summernote.css" rel="stylesheet">
     <script src="./summernote-0.6.2-dist/summernote.min.js"></script>
+    <script src="./datalist-polyfill/modernizr.custom.95508.js"></script>
+    <link href="./datalist-polyfill/style.css" rel="stylesheet">
     <link href="./styles.css" rel="stylesheet">
     <script src="./scripts.js"></script>
 </head>
